# svelte-fastapi-polyglot-otel-rfc-schema-designer

./: .cz.toml  .gitignore  AGENTS.md  README.md  compose.dev.yaml  compose.yaml  makefile
.agents/agents/sveltekit-o11y-expert/: AGENT.md
.agents/agents/sveltekit-observability-expert/: AGENT.md
.agents/agents/sveltekit-otel-expert/: AGENT.md
.agents/skills/sveltekit-otel/: SKILL.md
.cursor/agents/: README.md  docker-compose.md  e2e-test.md  fastapi-backend.md  openspec-pm.md  svelte-file-editor.md  unit-test.md
.cursor/instructions/: svelte.md
.githooks/: commit-msg
.github/: pull_request_template.md
api/: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  Makefile  README.md  openapi.json  pyproject.toml
api/app/: main.py  observability.py
api/app/db/: __init__.py  database.py  orm.py  repository.py
api/app/models/: __init__.py  entities.py
api/app/routers/: __init__.py  entities.py  workflows.py
api/scripts/: export_openapi.py
api/tests/: test_api.py
o11y/: .env.example  compose.yaml
o11y/docs/: local-o11y.md  telemetry-conventions.md
o11y/elastic/: README.md
o11y/grafana/: README.md
o11y/otel/: collector.dev.yml  collector.elastic.yml  collector.grafana.yml
openspec/changes/add-otel-observability/: design.md  (+2 more)
scripts/: setup.sh
ui/: .cz.toml  .dockerignore  .env.example  .gitignore  .npmrc  CHANGELOG.md  Dockerfile  README.md  components.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vite.config.ts
ui/scripts/: generate-api-zod.mjs  generate-api.mjs
ui/src/: env.ts  hooks.server.ts  instrumentation.server.ts
(+74 files in other folders)
