[project]
name = "svelte-fastapi-remote-functions-api"
version = "0.1.0"
description = "FastAPI backend for the svelte-fastapi-remote-functions example"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "sqlalchemy>=2.0.36",
    "opentelemetry-api>=1.29.0",
    "opentelemetry-sdk>=1.29.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.29.0",
    "opentelemetry-instrumentation-fastapi>=0.50b0",
    "opentelemetry-instrumentation-logging>=0.50b0",
    "opentelemetry-instrumentation-sqlalchemy>=0.50b0",
]

[project.optional-dependencies]
dev = [
    "commitizen>=4.6.0",
    "httpx>=0.28.0",
    "pytest>=8.3.0",
    "ruff>=0.8.0",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.0"
tag_format = "api-$version"
version_scheme = "semver"
version_files = ["pyproject.toml:project.version"]
update_changelog_on_bump = true
changelog_file = "CHANGELOG.md"
bump_message = "chore(api): release api $current_version → $new_version"
major_version_zero = true
changelog_pattern = "^(feat|fix|refactor|perf|BREAKING)"
